@@ -6,11 +6,11 @@ import com.feiniaojin.gracefulresponse.api.ResponseFactory;
 import com.feiniaojin.gracefulresponse.api.ResponseStatusFactory;
 import com.feiniaojin.gracefulresponse.data.Response;
 import com.feiniaojin.gracefulresponse.data.ResponseStatus;
+import javax.annotation.Resource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.StringUtils;
 
-import javax.annotation.Resource;
 import java.util.Objects;
 
 /**
@@ -40,7 +40,7 @@ public class DefaultResponseFactory implements ResponseFactory {
 
             //配置了Response的全限定名，即自定义了Response，用配置的进行返回
             if (StringUtils.hasLength(responseClassFullName)) {
-                Object newInstance = Class.forName(responseClassFullName).newInstance();
+                Object newInstance = Class.forName(responseClassFullName).getConstructor().newInstance();
                 return (Response) newInstance;
             } else {
                 //没有配Response的全限定名，则创建DefaultResponse
@@ -67,6 +67,12 @@ public class DefaultResponseFactory implements ResponseFactory {
     public Response newInstance(ResponseStatus responseStatus) {
         Response bean = this.newEmptyInstance();
         bean.setStatus(responseStatus);
+        return bean;
+    }
+
+    @Override public Response newInstance(ResponseStatus statusLine,Object data){
+        Response bean = this.newInstance(statusLine);
+        bean.setPayload(data);
         return bean;
     }
 
